Alterado/compilador.output
State 29 conflicts: 2 shift/reduce, 1 reduce/reduce
State 75 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT parametros_ou_vazio PONTO_E_VIRGULA bloco PONTO

    3 parametros_ou_vazio: parametros
    4                    | comando_vazio

    5 parametros: ABRE_PARENTESES lista_idents FECHA_PARENTESES

    6 tipo: INTEGER

    7 $@2: ε

    8 $@3: ε

    9 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas $@3 comando_composto

   10 parte_declara_vars: var

   11 parte_declara_sub_rotinas: parte_declara_sub_rotinas opcoes_sub_rotinas
   12                          | comando_vazio

   13 $@4: ε

   14 opcoes_sub_rotinas: declaracao_procedimento $@4 PONTO_E_VIRGULA

   15 $@5: ε

   16 opcoes_sub_rotinas: declaracao_funcao $@5 PONTO_E_VIRGULA
   17                   | comando_vazio

   18 var: VAR declara_vars
   19    | declara_vars

   20 declara_vars: declara_vars declara_var
   21             | declara_var

   22 $@6: ε

   23 $@7: ε

   24 declara_var: $@6 lista_id_var DOIS_PONTOS tipo $@7 PONTO_E_VIRGULA

   25 lista_id_var: lista_id_var VIRGULA IDENT
   26             | IDENT

   27 lista_idents: lista_idents VIRGULA IDENT
   28             | IDENT

   29 $@8: ε

   30 $@9: ε

   31 $@10: ε

   32 $@11: ε

   33 declaracao_procedimento: PROCEDURE $@8 IDENT $@9 $@10 parametros_formais_vazio PONTO_E_VIRGULA $@11 regra_forward_ou_bloco

   34 $@12: ε

   35 $@13: ε

   36 $@14: ε

   37 declaracao_funcao: FUNCTION $@12 IDENT $@13 parametros_formais_vazio DOIS_PONTOS tipo PONTO_E_VIRGULA $@14 regra_forward_ou_bloco

   38 parametros_formais_vazio: parametros_formais
   39                         | comando_vazio

   40 $@15: ε

   41 parametros_formais: ABRE_PARENTESES $@15 lista_parametros_formais FECHA_PARENTESES

   42 lista_parametros_formais: lista_parametros_formais PONTO_E_VIRGULA secao_parametros_formais

   43 $@16: ε

   44 lista_parametros_formais: $@16 secao_parametros_formais

   45 $@17: ε

   46 secao_parametros_formais: var_vazio $@17 lista_idents DOIS_PONTOS tipo

   47 var_vazio: VAR
   48          | comando_vazio

   49 comando_composto: T_BEGIN comandos T_END

   50 comandos: comandos PONTO_E_VIRGULA comando
   51         | comando

   52 comando: numero_ou_vazio comando_sem_rotulo

   53 numero_ou_vazio: numero DOIS_PONTOS
   54                | comando_vazio

   55 comando_vazio: ε

   56 comando_sem_rotulo: variavel atribuicao_procedimento
   57                   | atribuicao_funcao
   58                   | desvio
   59                   | comando_composto
   60                   | comando_condicional
   61                   | comando_repetitivo
   62                   | leitura
   63                   | escrita

   64 desvio: ε

   65 comando_condicional: if_then cond_else

   66 $@18: ε

   67 if_then: IF expressao $@18 THEN comando_sem_rotulo

   68 $@19: ε

   69 cond_else: ELSE $@19 else_multiplo_unico
   70          | comando_vazio

   71 else_multiplo_unico: comando_sem_rotulo

   72 $@20: ε

   73 $@21: ε

   74 $@22: ε

   75 chama_procedimento: $@20 ABRE_PARENTESES $@21 lista_expressoes_ou_vazio FECHA_PARENTESES $@22

   76 $@23: ε

   77 chama_procedimento: $@23

   78 $@24: ε

   79 $@25: ε

   80 $@26: ε

   81 chama_funcao: $@24 ABRE_PARENTESES $@25 lista_expressoes_ou_vazio FECHA_PARENTESES $@26

   82 lista_expressoes_ou_vazio: lista_expressoes
   83                          | comando_vazio

   84 $@27: ε

   85 $@28: ε

   86 comando_repetitivo: WHILE $@27 expressao DO $@28 comando_composto

   87 lista_expressoes: expressao

   88 $@29: ε

   89 lista_expressoes: expressao $@29 VIRGULA lista_expressoes

   90 $@30: ε

   91 expressao: $@30 expressao_simples relacao_exp_simples_ou_vazio

   92 relacao_exp_simples_ou_vazio: relacao expressao_simples
   93                             | comando_vazio

   94 relacao: IGUAL
   95        | DIFERENTE
   96        | MENOR
   97        | MENOR_IGUAL
   98        | MAIOR_IGUAL
   99        | MAIOR

  100 expressao_simples: soma_ou_vazio expressao_lista_termo

  101 soma_ou_vazio: SOMA
  102              | SUBTRACAO
  103              | comando_vazio

  104 expressao_lista_termo: expressao_lista_termo lista_termo
  105                      | termo

  106 lista_termo: SOMA termo
  107            | SUBTRACAO termo
  108            | OR termo

  109 termo: termo lista_fator
  110      | fator

  111 lista_fator: MULTIPLICACAO fator
  112            | DIVISAO fator
  113            | DIV fator
  114            | AND fator

  115 fator: variavel

  116 $@31: ε

  117 fator: variavel ABRE_PARENTESES $@31 lista_expressoes FECHA_PARENTESES
  118      | numero
  119      | ABRE_PARENTESES expressao FECHA_PARENTESES

  120 atribuicao_procedimento: atribuicao
  121                        | chama_procedimento

  122 atribuicao_funcao: atribuicao
  123                  | chama_funcao

  124 atribuicao: ATRIBUICAO expressao

  125 variavel: IDENT

  126 numero: NUMERO

  127 leitura: READ ABRE_PARENTESES lista_leitura FECHA_PARENTESES

  128 lista_leitura: lista_leitura VIRGULA simbolo_leitura
  129              | simbolo_leitura

  130 simbolo_leitura: IDENT

  131 escrita: WRITE ABRE_PARENTESES lista_escrita FECHA_PARENTESES

  132 lista_escrita: lista_escrita VIRGULA expressao
  133              | expressao

  134 regra_forward_ou_bloco: T_FORWARD

  135 $@32: ε

  136 regra_forward_ou_bloco: $@32 bloco


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 5 41 75 81 117 119 127 131
    FECHA_PARENTESES (260) 5 41 75 81 117 119 127 131
    VIRGULA (261) 25 27 89 128 132
    PONTO_E_VIRGULA (262) 2 14 16 24 33 37 42 50
    DOIS_PONTOS (263) 24 37 46 53
    PONTO (264) 2
    T_BEGIN (265) 49
    T_END (266) 49
    VAR (267) 18 47
    IDENT (268) 2 25 26 27 28 33 37 125 130
    ATRIBUICAO (269) 124
    INTEGER (270) 6
    OR (271) 108
    AND (272) 114
    WHILE (273) 86
    DO (274) 86
    IF (275) 67
    THEN (276) 67
    ELSE (277) 69
    MAIOR (278) 99
    MENOR (279) 96
    MAIOR_IGUAL (280) 98
    MENOR_IGUAL (281) 97
    IGUAL (282) 94
    DIFERENTE (283) 95
    SOMA (284) 101 106
    SUBTRACAO (285) 102 107
    MULTIPLICACAO (286) 111
    DIVISAO (287) 112
    DIV (288) 113
    NUMERO (289) 126
    READ (290) 127
    WRITE (291) 131
    PROCEDURE (292) 33
    FUNCTION (293) 37
    T_FORWARD (294) 134


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    programa (41)
        on left: 2
        on right: 0
    $@1 (42)
        on left: 1
        on right: 2
    parametros_ou_vazio (43)
        on left: 3 4
        on right: 2
    parametros (44)
        on left: 5
        on right: 3
    tipo (45)
        on left: 6
        on right: 24 37 46
    bloco (46)
        on left: 9
        on right: 2 136
    $@2 (47)
        on left: 7
        on right: 9
    $@3 (48)
        on left: 8
        on right: 9
    parte_declara_vars (49)
        on left: 10
        on right: 9
    parte_declara_sub_rotinas (50)
        on left: 11 12
        on right: 9 11
    opcoes_sub_rotinas (51)
        on left: 14 16 17
        on right: 11
    $@4 (52)
        on left: 13
        on right: 14
    $@5 (53)
        on left: 15
        on right: 16
    var (54)
        on left: 18 19
        on right: 10
    declara_vars (55)
        on left: 20 21
        on right: 18 19 20
    declara_var (56)
        on left: 24
        on right: 20 21
    $@6 (57)
        on left: 22
        on right: 24
    $@7 (58)
        on left: 23
        on right: 24
    lista_id_var (59)
        on left: 25 26
        on right: 24 25
    lista_idents (60)
        on left: 27 28
        on right: 5 27 46
    declaracao_procedimento (61)
        on left: 33
        on right: 14
    $@8 (62)
        on left: 29
        on right: 33
    $@9 (63)
        on left: 30
        on right: 33
    $@10 (64)
        on left: 31
        on right: 33
    $@11 (65)
        on left: 32
        on right: 33
    declaracao_funcao (66)
        on left: 37
        on right: 16
    $@12 (67)
        on left: 34
        on right: 37
    $@13 (68)
        on left: 35
        on right: 37
    $@14 (69)
        on left: 36
        on right: 37
    parametros_formais_vazio (70)
        on left: 38 39
        on right: 33 37
    parametros_formais (71)
        on left: 41
        on right: 38
    $@15 (72)
        on left: 40
        on right: 41
    lista_parametros_formais (73)
        on left: 42 44
        on right: 41 42
    $@16 (74)
        on left: 43
        on right: 44
    secao_parametros_formais (75)
        on left: 46
        on right: 42 44
    $@17 (76)
        on left: 45
        on right: 46
    var_vazio (77)
        on left: 47 48
        on right: 46
    comando_composto (78)
        on left: 49
        on right: 9 59 86
    comandos (79)
        on left: 50 51
        on right: 49 50
    comando (80)
        on left: 52
        on right: 50 51
    numero_ou_vazio (81)
        on left: 53 54
        on right: 52
    comando_vazio (82)
        on left: 55
        on right: 4 12 17 39 48 54 70 83 93 103
    comando_sem_rotulo (83)
        on left: 56 57 58 59 60 61 62 63
        on right: 52 67 71
    desvio (84)
        on left: 64
        on right: 58
    comando_condicional (85)
        on left: 65
        on right: 60
    if_then (86)
        on left: 67
        on right: 65
    $@18 (87)
        on left: 66
        on right: 67
    cond_else (88)
        on left: 69 70
        on right: 65
    $@19 (89)
        on left: 68
        on right: 69
    else_multiplo_unico (90)
        on left: 71
        on right: 69
    chama_procedimento (91)
        on left: 75 77
        on right: 121
    $@20 (92)
        on left: 72
        on right: 75
    $@21 (93)
        on left: 73
        on right: 75
    $@22 (94)
        on left: 74
        on right: 75
    $@23 (95)
        on left: 76
        on right: 77
    chama_funcao (96)
        on left: 81
        on right: 123
    $@24 (97)
        on left: 78
        on right: 81
    $@25 (98)
        on left: 79
        on right: 81
    $@26 (99)
        on left: 80
        on right: 81
    lista_expressoes_ou_vazio (100)
        on left: 82 83
        on right: 75 81
    comando_repetitivo (101)
        on left: 86
        on right: 61
    $@27 (102)
        on left: 84
        on right: 86
    $@28 (103)
        on left: 85
        on right: 86
    lista_expressoes (104)
        on left: 87 89
        on right: 82 89 117
    $@29 (105)
        on left: 88
        on right: 89
    expressao (106)
        on left: 91
        on right: 67 86 87 89 119 124 132 133
    $@30 (107)
        on left: 90
        on right: 91
    relacao_exp_simples_ou_vazio (108)
        on left: 92 93
        on right: 91
    relacao (109)
        on left: 94 95 96 97 98 99
        on right: 92
    expressao_simples (110)
        on left: 100
        on right: 91 92
    soma_ou_vazio (111)
        on left: 101 102 103
        on right: 100
    expressao_lista_termo (112)
        on left: 104 105
        on right: 100 104
    lista_termo (113)
        on left: 106 107 108
        on right: 104
    termo (114)
        on left: 109 110
        on right: 105 106 107 108 109
    lista_fator (115)
        on left: 111 112 113 114
        on right: 109
    fator (116)
        on left: 115 117 118 119
        on right: 110 111 112 113 114
    $@31 (117)
        on left: 116
        on right: 117
    atribuicao_procedimento (118)
        on left: 120 121
        on right: 56
    atribuicao_funcao (119)
        on left: 122 123
        on right: 57
    atribuicao (120)
        on left: 124
        on right: 120 122
    variavel (121)
        on left: 125
        on right: 56 115 117
    numero (122)
        on left: 126
        on right: 53 118
    leitura (123)
        on left: 127
        on right: 62
    lista_leitura (124)
        on left: 128 129
        on right: 127 128
    simbolo_leitura (125)
        on left: 130
        on right: 128 129
    escrita (126)
        on left: 131
        on right: 63
    lista_escrita (127)
        on left: 132 133
        on right: 131 132
    regra_forward_ou_bloco (128)
        on left: 134 136
        on right: 33 37
    $@32 (129)
        on left: 135
        on right: 136


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 • PROGRAM IDENT parametros_ou_vazio PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    2 programa: $@1 PROGRAM • IDENT parametros_ou_vazio PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT • parametros_ou_vazio PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6

    $default  reduce using rule 55 (comando_vazio)

    parametros_ou_vazio  go to state 7
    parametros           go to state 8
    comando_vazio        go to state 9


State 6

    5 parametros: ABRE_PARENTESES • lista_idents FECHA_PARENTESES

    IDENT  shift, and go to state 10

    lista_idents  go to state 11


State 7

    2 programa: $@1 PROGRAM IDENT parametros_ou_vazio • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 12


State 8

    3 parametros_ou_vazio: parametros •

    $default  reduce using rule 3 (parametros_ou_vazio)


State 9

    4 parametros_ou_vazio: comando_vazio •

    $default  reduce using rule 4 (parametros_ou_vazio)


State 10

   28 lista_idents: IDENT •

    $default  reduce using rule 28 (lista_idents)


State 11

    5 parametros: ABRE_PARENTESES lista_idents • FECHA_PARENTESES
   27 lista_idents: lista_idents • VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 13
    VIRGULA           shift, and go to state 14


State 12

    2 programa: $@1 PROGRAM IDENT parametros_ou_vazio PONTO_E_VIRGULA • bloco PONTO

    VAR  shift, and go to state 15

    $default  reduce using rule 22 ($@6)

    bloco               go to state 16
    parte_declara_vars  go to state 17
    var                 go to state 18
    declara_vars        go to state 19
    declara_var         go to state 20
    $@6                 go to state 21


State 13

    5 parametros: ABRE_PARENTESES lista_idents FECHA_PARENTESES •

    $default  reduce using rule 5 (parametros)


State 14

   27 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  shift, and go to state 22


State 15

   18 var: VAR • declara_vars

    $default  reduce using rule 22 ($@6)

    declara_vars  go to state 23
    declara_var   go to state 20
    $@6           go to state 21


State 16

    2 programa: $@1 PROGRAM IDENT parametros_ou_vazio PONTO_E_VIRGULA bloco • PONTO

    PONTO  shift, and go to state 24


State 17

    9 bloco: parte_declara_vars • $@2 parte_declara_sub_rotinas $@3 comando_composto

    $default  reduce using rule 7 ($@2)

    $@2  go to state 25


State 18

   10 parte_declara_vars: var •

    $default  reduce using rule 10 (parte_declara_vars)


State 19

   19 var: declara_vars •
   20 declara_vars: declara_vars • declara_var

    IDENT     reduce using rule 22 ($@6)
    $default  reduce using rule 19 (var)

    declara_var  go to state 26
    $@6          go to state 21


State 20

   21 declara_vars: declara_var •

    $default  reduce using rule 21 (declara_vars)


State 21

   24 declara_var: $@6 • lista_id_var DOIS_PONTOS tipo $@7 PONTO_E_VIRGULA

    IDENT  shift, and go to state 27

    lista_id_var  go to state 28


State 22

   27 lista_idents: lista_idents VIRGULA IDENT •

    $default  reduce using rule 27 (lista_idents)


State 23

   18 var: VAR declara_vars •
   20 declara_vars: declara_vars • declara_var

    IDENT     reduce using rule 22 ($@6)
    $default  reduce using rule 18 (var)

    declara_var  go to state 26
    $@6          go to state 21


State 24

    2 programa: $@1 PROGRAM IDENT parametros_ou_vazio PONTO_E_VIRGULA bloco PONTO •

    $default  reduce using rule 2 (programa)


State 25

    9 bloco: parte_declara_vars $@2 • parte_declara_sub_rotinas $@3 comando_composto

    $default  reduce using rule 55 (comando_vazio)

    parte_declara_sub_rotinas  go to state 29
    comando_vazio              go to state 30


State 26

   20 declara_vars: declara_vars declara_var •

    $default  reduce using rule 20 (declara_vars)


State 27

   26 lista_id_var: IDENT •

    $default  reduce using rule 26 (lista_id_var)


State 28

   24 declara_var: $@6 lista_id_var • DOIS_PONTOS tipo $@7 PONTO_E_VIRGULA
   25 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      shift, and go to state 31
    DOIS_PONTOS  shift, and go to state 32


State 29

    9 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas • $@3 comando_composto
   11 parte_declara_sub_rotinas: parte_declara_sub_rotinas • opcoes_sub_rotinas

    PROCEDURE  shift, and go to state 33
    FUNCTION   shift, and go to state 34

    T_BEGIN    reduce using rule 8 ($@3)
    T_BEGIN    [reduce using rule 55 (comando_vazio)]
    PROCEDURE  [reduce using rule 55 (comando_vazio)]
    FUNCTION   [reduce using rule 55 (comando_vazio)]
    $default   reduce using rule 8 ($@3)

    $@3                      go to state 35
    opcoes_sub_rotinas       go to state 36
    declaracao_procedimento  go to state 37
    declaracao_funcao        go to state 38
    comando_vazio            go to state 39


State 30

   12 parte_declara_sub_rotinas: comando_vazio •

    $default  reduce using rule 12 (parte_declara_sub_rotinas)


State 31

   25 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  shift, and go to state 40


State 32

   24 declara_var: $@6 lista_id_var DOIS_PONTOS • tipo $@7 PONTO_E_VIRGULA

    INTEGER  shift, and go to state 41

    tipo  go to state 42


State 33

   33 declaracao_procedimento: PROCEDURE • $@8 IDENT $@9 $@10 parametros_formais_vazio PONTO_E_VIRGULA $@11 regra_forward_ou_bloco

    $default  reduce using rule 29 ($@8)

    $@8  go to state 43


State 34

   37 declaracao_funcao: FUNCTION • $@12 IDENT $@13 parametros_formais_vazio DOIS_PONTOS tipo PONTO_E_VIRGULA $@14 regra_forward_ou_bloco

    $default  reduce using rule 34 ($@12)

    $@12  go to state 44


State 35

    9 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas $@3 • comando_composto

    T_BEGIN  shift, and go to state 45

    comando_composto  go to state 46


State 36

   11 parte_declara_sub_rotinas: parte_declara_sub_rotinas opcoes_sub_rotinas •

    $default  reduce using rule 11 (parte_declara_sub_rotinas)


State 37

   14 opcoes_sub_rotinas: declaracao_procedimento • $@4 PONTO_E_VIRGULA

    $default  reduce using rule 13 ($@4)

    $@4  go to state 47


State 38

   16 opcoes_sub_rotinas: declaracao_funcao • $@5 PONTO_E_VIRGULA

    $default  reduce using rule 15 ($@5)

    $@5  go to state 48


State 39

   17 opcoes_sub_rotinas: comando_vazio •

    $default  reduce using rule 17 (opcoes_sub_rotinas)


State 40

   25 lista_id_var: lista_id_var VIRGULA IDENT •

    $default  reduce using rule 25 (lista_id_var)


State 41

    6 tipo: INTEGER •

    $default  reduce using rule 6 (tipo)


State 42

   24 declara_var: $@6 lista_id_var DOIS_PONTOS tipo • $@7 PONTO_E_VIRGULA

    $default  reduce using rule 23 ($@7)

    $@7  go to state 49


State 43

   33 declaracao_procedimento: PROCEDURE $@8 • IDENT $@9 $@10 parametros_formais_vazio PONTO_E_VIRGULA $@11 regra_forward_ou_bloco

    IDENT  shift, and go to state 50


State 44

   37 declaracao_funcao: FUNCTION $@12 • IDENT $@13 parametros_formais_vazio DOIS_PONTOS tipo PONTO_E_VIRGULA $@14 regra_forward_ou_bloco

    IDENT  shift, and go to state 51


State 45

   49 comando_composto: T_BEGIN • comandos T_END

    NUMERO  shift, and go to state 52

    $default  reduce using rule 55 (comando_vazio)

    comandos         go to state 53
    comando          go to state 54
    numero_ou_vazio  go to state 55
    comando_vazio    go to state 56
    numero           go to state 57


State 46

    9 bloco: parte_declara_vars $@2 parte_declara_sub_rotinas $@3 comando_composto •

    $default  reduce using rule 9 (bloco)


State 47

   14 opcoes_sub_rotinas: declaracao_procedimento $@4 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 58


State 48

   16 opcoes_sub_rotinas: declaracao_funcao $@5 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 59


State 49

   24 declara_var: $@6 lista_id_var DOIS_PONTOS tipo $@7 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 60


State 50

   33 declaracao_procedimento: PROCEDURE $@8 IDENT • $@9 $@10 parametros_formais_vazio PONTO_E_VIRGULA $@11 regra_forward_ou_bloco

    $default  reduce using rule 30 ($@9)

    $@9  go to state 61


State 51

   37 declaracao_funcao: FUNCTION $@12 IDENT • $@13 parametros_formais_vazio DOIS_PONTOS tipo PONTO_E_VIRGULA $@14 regra_forward_ou_bloco

    $default  reduce using rule 35 ($@13)

    $@13  go to state 62


State 52

  126 numero: NUMERO •

    $default  reduce using rule 126 (numero)


State 53

   49 comando_composto: T_BEGIN comandos • T_END
   50 comandos: comandos • PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 63
    T_END            shift, and go to state 64


State 54

   51 comandos: comando •

    $default  reduce using rule 51 (comandos)


State 55

   52 comando: numero_ou_vazio • comando_sem_rotulo

    T_BEGIN     shift, and go to state 45
    IDENT       shift, and go to state 65
    ATRIBUICAO  shift, and go to state 66
    WHILE       shift, and go to state 67
    IF          shift, and go to state 68
    READ        shift, and go to state 69
    WRITE       shift, and go to state 70

    ABRE_PARENTESES  reduce using rule 78 ($@24)
    $default         reduce using rule 64 (desvio)

    comando_composto     go to state 71
    comando_sem_rotulo   go to state 72
    desvio               go to state 73
    comando_condicional  go to state 74
    if_then              go to state 75
    chama_funcao         go to state 76
    $@24                 go to state 77
    comando_repetitivo   go to state 78
    atribuicao_funcao    go to state 79
    atribuicao           go to state 80
    variavel             go to state 81
    leitura              go to state 82
    escrita              go to state 83


State 56

   54 numero_ou_vazio: comando_vazio •

    $default  reduce using rule 54 (numero_ou_vazio)


State 57

   53 numero_ou_vazio: numero • DOIS_PONTOS

    DOIS_PONTOS  shift, and go to state 84


State 58

   14 opcoes_sub_rotinas: declaracao_procedimento $@4 PONTO_E_VIRGULA •

    $default  reduce using rule 14 (opcoes_sub_rotinas)


State 59

   16 opcoes_sub_rotinas: declaracao_funcao $@5 PONTO_E_VIRGULA •

    $default  reduce using rule 16 (opcoes_sub_rotinas)


State 60

   24 declara_var: $@6 lista_id_var DOIS_PONTOS tipo $@7 PONTO_E_VIRGULA •

    $default  reduce using rule 24 (declara_var)


State 61

   33 declaracao_procedimento: PROCEDURE $@8 IDENT $@9 • $@10 parametros_formais_vazio PONTO_E_VIRGULA $@11 regra_forward_ou_bloco

    $default  reduce using rule 31 ($@10)

    $@10  go to state 85


State 62

   37 declaracao_funcao: FUNCTION $@12 IDENT $@13 • parametros_formais_vazio DOIS_PONTOS tipo PONTO_E_VIRGULA $@14 regra_forward_ou_bloco

    ABRE_PARENTESES  shift, and go to state 86

    $default  reduce using rule 55 (comando_vazio)

    parametros_formais_vazio  go to state 87
    parametros_formais        go to state 88
    comando_vazio             go to state 89


State 63

   50 comandos: comandos PONTO_E_VIRGULA • comando

    NUMERO  shift, and go to state 52

    $default  reduce using rule 55 (comando_vazio)

    comando          go to state 90
    numero_ou_vazio  go to state 55
    comando_vazio    go to state 56
    numero           go to state 57


State 64

   49 comando_composto: T_BEGIN comandos T_END •

    $default  reduce using rule 49 (comando_composto)


State 65

  125 variavel: IDENT •

    $default  reduce using rule 125 (variavel)


State 66

  124 atribuicao: ATRIBUICAO • expressao

    $default  reduce using rule 90 ($@30)

    expressao  go to state 91
    $@30       go to state 92


State 67

   86 comando_repetitivo: WHILE • $@27 expressao DO $@28 comando_composto

    $default  reduce using rule 84 ($@27)

    $@27  go to state 93


State 68

   67 if_then: IF • expressao $@18 THEN comando_sem_rotulo

    $default  reduce using rule 90 ($@30)

    expressao  go to state 94
    $@30       go to state 92


State 69

  127 leitura: READ • ABRE_PARENTESES lista_leitura FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 95


State 70

  131 escrita: WRITE • ABRE_PARENTESES lista_escrita FECHA_PARENTESES

    ABRE_PARENTESES  shift, and go to state 96


State 71

   59 comando_sem_rotulo: comando_composto •

    $default  reduce using rule 59 (comando_sem_rotulo)


State 72

   52 comando: numero_ou_vazio comando_sem_rotulo •

    $default  reduce using rule 52 (comando)


State 73

   58 comando_sem_rotulo: desvio •

    $default  reduce using rule 58 (comando_sem_rotulo)


State 74

   60 comando_sem_rotulo: comando_condicional •

    $default  reduce using rule 60 (comando_sem_rotulo)


State 75

   65 comando_condicional: if_then • cond_else

    ELSE  shift, and go to state 97

    ELSE      [reduce using rule 55 (comando_vazio)]
    $default  reduce using rule 55 (comando_vazio)

    comando_vazio  go to state 98
    cond_else      go to state 99


State 76

  123 atribuicao_funcao: chama_funcao •

    $default  reduce using rule 123 (atribuicao_funcao)


State 77

   81 chama_funcao: $@24 • ABRE_PARENTESES $@25 lista_expressoes_ou_vazio FECHA_PARENTESES $@26

    ABRE_PARENTESES  shift, and go to state 100


State 78

   61 comando_sem_rotulo: comando_repetitivo •

    $default  reduce using rule 61 (comando_sem_rotulo)


State 79

   57 comando_sem_rotulo: atribuicao_funcao •

    $default  reduce using rule 57 (comando_sem_rotulo)


State 80

  122 atribuicao_funcao: atribuicao •

    $default  reduce using rule 122 (atribuicao_funcao)


State 81

   56 comando_sem_rotulo: variavel • atribuicao_procedimento

    ATRIBUICAO  shift, and go to state 66

    ABRE_PARENTESES  reduce using rule 72 ($@20)
    $default         reduce using rule 76 ($@23)

    chama_procedimento       go to state 101
    $@20                     go to state 102
    $@23                     go to state 103
    atribuicao_procedimento  go to state 104
    atribuicao               go to state 105


State 82

   62 comando_sem_rotulo: leitura •

    $default  reduce using rule 62 (comando_sem_rotulo)


State 83

   63 comando_sem_rotulo: escrita •

    $default  reduce using rule 63 (comando_sem_rotulo)


State 84

   53 numero_ou_vazio: numero DOIS_PONTOS •

    $default  reduce using rule 53 (numero_ou_vazio)


State 85

   33 declaracao_procedimento: PROCEDURE $@8 IDENT $@9 $@10 • parametros_formais_vazio PONTO_E_VIRGULA $@11 regra_forward_ou_bloco

    ABRE_PARENTESES  shift, and go to state 86

    $default  reduce using rule 55 (comando_vazio)

    parametros_formais_vazio  go to state 106
    parametros_formais        go to state 88
    comando_vazio             go to state 89


State 86

   41 parametros_formais: ABRE_PARENTESES • $@15 lista_parametros_formais FECHA_PARENTESES

    $default  reduce using rule 40 ($@15)

    $@15  go to state 107


State 87

   37 declaracao_funcao: FUNCTION $@12 IDENT $@13 parametros_formais_vazio • DOIS_PONTOS tipo PONTO_E_VIRGULA $@14 regra_forward_ou_bloco

    DOIS_PONTOS  shift, and go to state 108


State 88

   38 parametros_formais_vazio: parametros_formais •

    $default  reduce using rule 38 (parametros_formais_vazio)


State 89

   39 parametros_formais_vazio: comando_vazio •

    $default  reduce using rule 39 (parametros_formais_vazio)


State 90

   50 comandos: comandos PONTO_E_VIRGULA comando •

    $default  reduce using rule 50 (comandos)


State 91

  124 atribuicao: ATRIBUICAO expressao •

    $default  reduce using rule 124 (atribuicao)


State 92

   91 expressao: $@30 • expressao_simples relacao_exp_simples_ou_vazio

    SOMA       shift, and go to state 109
    SUBTRACAO  shift, and go to state 110

    $default  reduce using rule 55 (comando_vazio)

    comando_vazio      go to state 111
    expressao_simples  go to state 112
    soma_ou_vazio      go to state 113


State 93

   86 comando_repetitivo: WHILE $@27 • expressao DO $@28 comando_composto

    $default  reduce using rule 90 ($@30)

    expressao  go to state 114
    $@30       go to state 92


State 94

   67 if_then: IF expressao • $@18 THEN comando_sem_rotulo

    $default  reduce using rule 66 ($@18)

    $@18  go to state 115


State 95

  127 leitura: READ ABRE_PARENTESES • lista_leitura FECHA_PARENTESES

    IDENT  shift, and go to state 116

    lista_leitura    go to state 117
    simbolo_leitura  go to state 118


State 96

  131 escrita: WRITE ABRE_PARENTESES • lista_escrita FECHA_PARENTESES

    $default  reduce using rule 90 ($@30)

    expressao      go to state 119
    $@30           go to state 92
    lista_escrita  go to state 120


State 97

   69 cond_else: ELSE • $@19 else_multiplo_unico

    $default  reduce using rule 68 ($@19)

    $@19  go to state 121


State 98

   70 cond_else: comando_vazio •

    $default  reduce using rule 70 (cond_else)


State 99

   65 comando_condicional: if_then cond_else •

    $default  reduce using rule 65 (comando_condicional)


State 100

   81 chama_funcao: $@24 ABRE_PARENTESES • $@25 lista_expressoes_ou_vazio FECHA_PARENTESES $@26

    $default  reduce using rule 79 ($@25)

    $@25  go to state 122


State 101

  121 atribuicao_procedimento: chama_procedimento •

    $default  reduce using rule 121 (atribuicao_procedimento)


State 102

   75 chama_procedimento: $@20 • ABRE_PARENTESES $@21 lista_expressoes_ou_vazio FECHA_PARENTESES $@22

    ABRE_PARENTESES  shift, and go to state 123


State 103

   77 chama_procedimento: $@23 •

    $default  reduce using rule 77 (chama_procedimento)


State 104

   56 comando_sem_rotulo: variavel atribuicao_procedimento •

    $default  reduce using rule 56 (comando_sem_rotulo)


State 105

  120 atribuicao_procedimento: atribuicao •

    $default  reduce using rule 120 (atribuicao_procedimento)


State 106

   33 declaracao_procedimento: PROCEDURE $@8 IDENT $@9 $@10 parametros_formais_vazio • PONTO_E_VIRGULA $@11 regra_forward_ou_bloco

    PONTO_E_VIRGULA  shift, and go to state 124


State 107

   41 parametros_formais: ABRE_PARENTESES $@15 • lista_parametros_formais FECHA_PARENTESES

    $default  reduce using rule 43 ($@16)

    lista_parametros_formais  go to state 125
    $@16                      go to state 126


State 108

   37 declaracao_funcao: FUNCTION $@12 IDENT $@13 parametros_formais_vazio DOIS_PONTOS • tipo PONTO_E_VIRGULA $@14 regra_forward_ou_bloco

    INTEGER  shift, and go to state 41

    tipo  go to state 127


State 109

  101 soma_ou_vazio: SOMA •

    $default  reduce using rule 101 (soma_ou_vazio)


State 110

  102 soma_ou_vazio: SUBTRACAO •

    $default  reduce using rule 102 (soma_ou_vazio)


State 111

  103 soma_ou_vazio: comando_vazio •

    $default  reduce using rule 103 (soma_ou_vazio)


State 112

   91 expressao: $@30 expressao_simples • relacao_exp_simples_ou_vazio

    MAIOR        shift, and go to state 128
    MENOR        shift, and go to state 129
    MAIOR_IGUAL  shift, and go to state 130
    MENOR_IGUAL  shift, and go to state 131
    IGUAL        shift, and go to state 132
    DIFERENTE    shift, and go to state 133

    $default  reduce using rule 55 (comando_vazio)

    comando_vazio                 go to state 134
    relacao_exp_simples_ou_vazio  go to state 135
    relacao                       go to state 136


State 113

  100 expressao_simples: soma_ou_vazio • expressao_lista_termo

    ABRE_PARENTESES  shift, and go to state 137
    IDENT            shift, and go to state 65
    NUMERO           shift, and go to state 52

    expressao_lista_termo  go to state 138
    termo                  go to state 139
    fator                  go to state 140
    variavel               go to state 141
    numero                 go to state 142


State 114
